# GPBLUP

./: .gitignore  BUILD.md  BUILD_GUIDE.md  CMakeLists.txt  DEVELOPMENT_ENVIRONMENT.md  DOCUMENTATION_INDEX.md  GPBLUP_Program_Manual_English.md  INSTALL.md  Makefile.popQC  ORGANIZATION_SUMMARY.md  PROGRAM_DEVELOPMENT_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  RESTRUCTURING_COMPLETE.md  USER_GUIDE.md  add_to_cmake.sh  build.sh  create_program.sh  install.sh
PHimpute/: PARAMETER_GUIDE.md  README.md  phimpute.f90
PHimpute/src/: M_phimpute_bitpack.f90  M_phimpute_data.f90  M_phimpute_family_phasing.f90  M_phimpute_haplotype_impute.f90  M_phimpute_haplotype_lib.f90  M_phimpute_io_geno.f90  M_phimpute_map.f90  M_phimpute_mpi.f90  M_phimpute_output.f90  M_phimpute_params.f90  M_phimpute_pedigree_deterministic.f90  M_phimpute_population_impute.f90  M_phimpute_qc.f90  M_phimpute_service.f90  M_phimpute_steps.f90  M_readpar_phimpute.f90
ReadFR/: HASH_TABLE_GUIDE.md  Makefile  PED_HASH_TABLE_GUIDE.md  ReadFR  ReadFR.f90  quick_start.sh
ReadFR/src/: M_readpar_readfr.f90
docs/: ALGORITHM_BACKGROUND.md  MODEL_PROOF.md  PACKAGING.md
html/: BUILD.html  DOCUMENTATION_INDEX.html  ORGANIZATION_SUMMARY.html  PROJECT_STRUCTURE.html  README.html  RESTRUCTURING_COMPLETE.html  USER_GUIDE.html
pedrel/: A_tab.txt  A_triplets.txt  CHANGELOG.md  Geno_animal.txt  M_param.f90  M_ped.f90  colleau_mod.f90  diag_YY2352649.txt  diag_YY2552875.txt  diag_YY2552881.txt  diag_YY2552963.txt  diag_YY2553044.txt  diag_YY2553091.txt  diag_YY2553149.txt  diag_YY2553171.txt  diag_YY2553244.txt  diag_YY2554021.txt  diag_colleau  diag_colleau.f90  diag_colleau.out  libsearch.f90  params.txt  params_sample.txt  relped  relped.f90  relped_dbg  relped_diag.txt  relped_extracted.txt  relped_extracted_run2.txt  relped_run_capture.txt  relped_run_capture2.txt  relped_run_capture3.txt  relped_run_capture_fix.txt  relped_run_capture_tabular.txt  relped_run_compare.txt  relped_run_dbg_assign.txt  relped_run_diagnostics.txt  relped_run_fix2.txt  relped_run_fix3.txt  relped_run_fix4.txt  (+20 more)
popQC/: HANDOFF_2026-03-18.md  PIPELINE_GUIDE.md  PIPELINE_WORKFLOW_GUIDE.md  QC_ALGO_SPECIFICATION.md  QC_METRICS_GUIDE.md  README.md  parent_seek_main.f90  popQC  popQC.f90  popQC_DESIGN_SPECIFICATION.md  popQC_FULL_TECHNICAL_REPORT.md  popQC_TECHNICAL_MANUAL.md  popQC_parameter_manual.txt  step8_regression_metrics.sh  test_parameter_with_comments.txt
popQC/src/: M_IO_Geno.f90  M_QCGenoIO.f90  M_QCIDMerge.f90  M_QCMendel.f90  M_QCParentSeek.f90  M_QCSNP.f90  M_QCSNPSelect.f90  M_QCSetup.f90  M_QCSexCheck.f90  M_readpar_popqc.f90
relgeno/: RELGENO_PARAMS.md  relgeno.f90  relgeno_params_example.txt
relgeno/src/: M_relgeno_service.f90
relped/: CHANGELOG.md  CONTINUE_TOMORROW.md  Geno_animal.txt_ren  M_readfile.f90  PARAMETER_GUIDE.md  README.md  colleau_example.f90  params.txt  params_sample.txt  relped  relped.f90  relped_mismatch_report.txt  relped_mismatch_report_filtered.txt  renped.f90  sample.ped  sample_ref.ped_ren  test_params.txt  test_ped.txt  test_ref.txt_ren
relped/fhash/: hash_inc.f90
relped/src/: M_readpar_relped.f90  M_relped_service.f90  colleau_mod.f90  colleau_text.f90  renped.f90
source/: H_MapRead.f90  H_PedRead.f90  M_HWEParam.f90  M_QCGenoIO.f90  M_QCMendel.f90  M_QCSetup.f90  M_ReadFile.f90  M_readpar.f90  test_readpar
src/: .ignore  H_MapRead.f90  H_PedRead.f90  LAPACKinv.f90  M_Hashtable.f90  M_IO_Geno.f90  M_IO_Map.f90  M_IO_Ped.f90  M_QCIDMerge.f90  M_QCIDMergePairEval.f90  M_QCParentSeek.f90  M_QCSNP.f90  M_QCSexCheck.f90  M_QCStepRunner.f90  M_ReadFile.f90  M_Sort.f90  M_StrEdit.f90  M_Variables.f90  M_hashsort.f90  M_param.f90  M_ped.f90  M_readpar.f90  M_readpar_popqc.f90  M_readpar_relgeno.f90  M_readpar_relped.f90  M_relgeno_service.f90  M_renped_config.f90  M_sparsemme.f90  colleau_mod.f90  colleau_text.f90  inbreed.f90  link_heap.f90  read_amat  readpar_mod.f90  relped  renped.f90  renped_main  test_readpar.f90
src/relped/: M_param.f90  M_ped.f90  colleau_mod.f90  link_list.f90  renped.f90
test/: program test_readpar.f90
tools/: package_release.sh
